# scat

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_PLAN.md  LICENSE  README.md  TESTING.md
src/: main.rs  serial.rs  ui.rs
tests/: cli_args_tests.rs
