[package]
name = "scat"
version = "0.1.0"
edition = "2021"
authors = ["Hardware Developer"]
description = "Serial CAT - A cross-platform CLI tool for serial port communication"
repository = "https://github.com/yourusername/scat"

[dependencies]
serialport = "4.3"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
crossterm = "0.27"
tokio = { version = "1.35", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
